# libtorch-rust

./: Cargo.toml  README.md  build.rs  run_examples.sh  run_tests.sh  wrapper.h
examples/: autograd.rs  basic_tensor.rs  custom_loss_function.rs  dataset_example.rs  function_approx.rs  hello_world.rs  neural_network.rs  performance_test.rs  simple_demo.rs  simple_optimization.rs  test_runner.rs  time_series_prediction.rs
src/: error.rs  lib.rs  simple_test.rs
src/autograd/: mod.rs
src/cpp/: torch_wrapper.cpp
src/cuda/: mod.rs
src/nn/: mod.rs
src/ops/: mod.rs
src/tensor/: mod.rs
src/utils/: mod.rs
tests/: nn_tests.rs  tensor_tests.rs
